#
# Copyright 2017, Data61, CSIRO (ABN 41 687 119 230)
#
# SPDX-License-Identifier: BSD-2-Clause
#

cmake_minimum_required(VERSION 3.7.2)

add_subdirectory(libutils)
add_subdirectory(libplatsupport)
add_subdirectory(libelf)
add_subdirectory(libcpio)
add_subdirectory(libpci)
add_subdirectory(libethdrivers)
add_subdirectory(liblwip)
add_subdirectory(libpicotcp)
add_subdirectory(libfdt)
add_subdirectory(libsatadrivers)
